# Message-Authentication-for-IEC-61850

./: README.md  build-all.sh
CMMA/: CMakeLists.txt
CMMA/include/: Config.h  Constants.h  CryptoUtils.h  HuffTree.h  HuffmanCode.h  HuffmanNode.h  Message.h  ProofNode.h
CMMA/src/: CryptoUtils.cpp  GenerateMessages.cpp  GenerateNonces.cpp  HuffTree.cpp  HuffmanCode.cpp  HuffmanNode.cpp  ProveVerify.cpp  main.cpp
CMMA/wolfssl-master/: CMakeLists.txt  user_settings.h
CMMA/wolfssl-master/wolfssl/wolfcrypt/: random.h
LoMoS/: compile.sh  data  main.c  merkletree.h  mt_arr_list.c  mt_arr_list.h  mt_config.h  mt_crypto.c  mt_crypto.h  mt_data.h  mt_impl.c  mt_state.c  mt_state.h  test_prog  tester.sh  tester_ecc.sh
